# tiberius-derive

./: Cargo.toml  LICENSE
src/: lib.rs  main.rs
tiberius-derive/: Cargo.toml  README.md
tiberius-derive-example/: Cargo.toml
tiberius-derive-example/src/: main.rs
tiberius-derive-tests/: Cargo.toml  foo.rs  run_tests.bat  run_tests.sh
tiberius-derive-tests/tests/: by_ref.rs  by_ref_by_position.rs  by_value.rs  by_value_indexed.rs  rename_all.rs  setup_database.rs  str_auto_owned.rs
tiberius-derive-tests/tests/util/: mod.rs
tiberius-derive-traits/: Cargo.toml
tiberius-derive-traits/src/: lib.rs
tiberius-derive/src/: from_row_opts.rs  lib.rs
tiberius-derive/tests/: by_copy.rs  by_position_owned.rs  by_ref.rs  by_ref_by_index.rs  rename_all.rs  test.rs
