[package]
name = "tiberius-derive"
version = "0.1.0"
authors = ["mlcruz1 <mlcruz@inf.ufrgs.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius = {git = "https://github.com/mobiltracker/tiberius", features=["serde", "chrono"]}
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.13.0"
ident_case = "1"

[lib]
proc-macro = true
path = "./tiberius-derive/src/lib.rs"