[package]
name = "tiberius-derive-example"
version = "0.1.0"
authors = ["Matheus Cruz <mlcruz@inf.ufrgs.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius = "0.5.12"
futures = "0.3"
futures-util = "0.3"
tiberius-derive = {path = "../tiberius-derive"}
