[package]
name = "tiberius-derive-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius = {version= "0.7.1", features = ["chrono"]}
tiberius-derive = {path = "../tiberius-derive"}
tokio = {version = "1.0", features = ["net", "time", "macros", "rt"]}
once_cell = "1"
tokio-util = { version = "0.6",features = ["compat"]}
chrono = "0.4.19"