[package]
name = "tiberius-derive"
version = "0.0.1"
authors = ["mlcruz1 <mlcruz@inf.ufrgs.br>"]
edition = "2018"
description = "Derive macros for Tiberius"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius = "0.7.1"
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
darling = "0.13"
ident_case = "1"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/test.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
